--- a/src/app/login/login/login.component.html
+++ b/src/app/login/login/login.component.html
@@ -1,1 +1,48 @@
-<p>login works!</p>
+<main class="login-form">
+    <div class="cotainer">
+      <div class="row justify-content-center">
+        <div class="col-md-8">
+          <div class="card">
+            <div class="card-header">Login</div>
+            <div class="card-body">
+              <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" >
+                <div class="form-group row">
+                  <label for="email" class="col-md-4 col-form-label text-md-right">E-Mail Address</label>
+                  <div class="col-md-6">
+                    <input type="text" id="email" class="form-control" formControlName="email" required autofocus>
+                  </div>
+                </div>
+  
+                <div class="form-group row">
+                  <label for="password" class="col-md-4 col-form-label text-md-right">Password</label>
+                  <div class="col-md-6">
+                    <input type="password" id="password" class="form-control" formControlName="password" required>
+                  </div>
+                </div>
+  
+                <div class="form-group row">
+                  <div class="col-md-6 offset-md-4">
+                    <div class="checkbox">
+                      <label>
+                        <input type="checkbox" formControlName="rememberMe"> Remember Me
+                      </label>
+                    </div>
+                  </div>
+                </div>
+  
+                <div class="col-md-6 offset-md-4">
+                  <button type="submit" class="btn btn-primary">
+                    Login
+                  </button>
+                  <a href="#" class="btn btn-link">
+                    Forgot Your Password?
+                  </a>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </main>
+  
